--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "private": true,
     "dependencies": {
         "core-util-is": "^1.0.2",
-        "gulp": "^4.0.2"
+        "gulp": "^4.0.2",
+        "swiper": "^8.3.2"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
